--- a/Components/Pages/Expenses.razor
+++ b/Components/Pages/Expenses.razor
@@ -16,18 +16,21 @@
             <div class="col-lg-12">
                 <div class="row">
                     <table id="creditEntriesTable"
-                           class="table table-dark table-striped table-hover table-responsive-sm">
+                           class="table  table-hover table-responsive-sm">
                         <thead>
                             <tr>
-                                <th>Id</th>
                                 <th>Date</th>
                                 <th>Item Name</th>
                                 <th>Quantity</th>
                                 <th>Rate</th>
                                 <th>Total Amount</th>
+                                <th>Remaining Balance</th>
                             </tr>
                         </thead>
                     </table>
+                    <div class="summary-box">
+                        <p><strong>Total Expenses: <span id="totalExpenses">₹ 0.00</span></strong></p>
+                    </div>
                 </div>
             </div>
         </div>
